@@ -35,11 +35,11 @@ public class AutomatedBuildTest extends BuildTest {
 
     private static final String[] sBuiltProjects = new String[] {
             "aidl", "api", "applibtest", "assets", "attrOrder", "basic", "dependencies",
-            "dependencyChecker", "flavored", "flavorlib", "flavors", "libProguardJarDep",
-            "libProguardLibDep", "libTestDep", "libsTest", "localJars", "migrated", "multiproject",
-            "multires", "ndkSanAngeles", "overlay1", "overlay2", "pkgOverride", "proguard",
-            "proguardLib", "renderscript", "renderscriptInLib", "renderscriptMultiSrc",
-            "rsSupportMode", "sameNamedLibs", "tictactoe" /*, "autorepo"*/
+            "dependencyChecker", "flavored", "flavorlib", "flavors", "genFolderApi",
+            "libProguardJarDep", "libProguardLibDep", "libTestDep", "libsTest", "localJars",
+            "migrated", "multiproject", "multires", "ndkSanAngeles", "overlay1", "overlay2",
+            "pkgOverride", "proguard", "proguardLib", "renderscript", "renderscriptInLib",
+            "renderscriptMultiSrc", "rsSupportMode", "sameNamedLibs", "tictactoe" /*, "autorepo"*/
     };
 
     private static final String[] sReportProjects = new String[] {
