@@ -11,6 +11,10 @@
    - Added ability to test proguarded (obfuscated) apps.
 - Jar files are now pre-dexed for faster dexing.
 - First pass at NDK integration
+- API to add new generated source folders:
+  variant.addGeneratedSourceFolders(generatingTask, sourceFolder1, sourceFolders2,...)
+  This automatically adds the dependency on the task, sets up the JavaCompile task inputs and propagates
+  the folders to the model for IDE integration.
 
 0.6.3
 - Fixed ClassNotFoundException:MergingException introduced in 0.6.2
